# docs/openapi.yaml
@@ -809,6 +809,7 @@ paths:
                     - confirmationsCount
                     - watchersCount
                     - isWatched
+                    - canDelete
                     - responsibleOrganization
                     - version
                     - isDemo
@@ -887,6 +888,8 @@ paths:
                       minimum: 0
                       type: integer
                     isWatched:
+                      type: boolean
+                    canDelete:
                       type: boolean
                     responsibleOrganization:
                       type: string
@@ -1111,6 +1114,7 @@ paths:
                   - confirmationsCount
                   - watchersCount
                   - isWatched
+                  - canDelete
                   - responsibleOrganization
                   - version
                   - isDemo
@@ -1189,6 +1193,8 @@ paths:
                     minimum: 0
                     type: integer
                   isWatched:
+                    type: boolean
+                  canDelete:
                     type: boolean
                   responsibleOrganization:
                     type: string
@@ -1392,6 +1398,7 @@ paths:
                   - confirmationsCount
                   - watchersCount
                   - isWatched
+                  - canDelete
                   - responsibleOrganization
                   - version
                   - isDemo
@@ -1470,6 +1477,8 @@ paths:
                     minimum: 0
                     type: integer
                   isWatched:
+                    type: boolean
+                  canDelete:
                     type: boolean
                   responsibleOrganization:
                     type: string
@@ -1608,6 +1617,79 @@ paths:
                     type: string
                   requestId:
                     type: string
+    delete:
+      tags:
+        - cases
+      parameters:
+        - schema:
+            type: string
+            format: uuid
+          in: path
+          name: caseId
+          required: true
+      security:
+        - bearerAuth: []
+        - demoUser: []
+      responses:
+        "200":
+          description: Default Response
+          content:
+            application/json:
+              schema:
+                type: object
+                required:
+                  - deleted
+                properties:
+                  deleted:
+                    type: boolean
+        "401":
+          description: Default Response
+          content:
+            application/json:
+              schema:
+                type: object
+                required:
+                  - error
+                  - message
+                properties:
+                  error:
+                    type: string
+                  message:
+                    type: string
+                  requestId:
+                    type: string
+        "403":
+          description: Default Response
+          content:
+            application/json:
+              schema:
+                type: object
+                required:
+                  - error
+                  - message
+                properties:
+                  error:
+                    type: string
+                  message:
+                    type: string
+                  requestId:
+                    type: string
+        "404":
+          description: Default Response
+          content:
+            application/json:
+              schema:
+                type: object
+                required:
+                  - error
+                  - message
+                properties:
+                  error:
+                    type: string
+                  message:
+                    type: string
+                  requestId:
+                    type: string
   /api/cases/deduplication:
     post:
       tags:
@@ -1681,6 +1763,7 @@ paths:
                     - confirmationsCount
                     - watchersCount
                     - isWatched
+                    - canDelete
                     - responsibleOrganization
                     - version
                     - isDemo
@@ -1759,6 +1842,8 @@ paths:
                       minimum: 0
                       type: integer
                     isWatched:
+                      type: boolean
+                    canDelete:
                       type: boolean
                     responsibleOrganization:
                       type: string
@@ -1930,6 +2015,7 @@ paths:
                   - confirmationsCount
                   - watchersCount
                   - isWatched
+                  - canDelete
                   - responsibleOrganization
                   - version
                   - isDemo
@@ -2008,6 +2094,8 @@ paths:
                     minimum: 0
                     type: integer
                   isWatched:
+                    type: boolean
+                  canDelete:
                     type: boolean
                   responsibleOrganization:
                     type: string
@@ -2163,6 +2251,7 @@ paths:
                   - confirmationsCount
                   - watchersCount
                   - isWatched
+                  - canDelete
                   - responsibleOrganization
                   - version
                   - isDemo
@@ -2241,6 +2330,8 @@ paths:
                     minimum: 0
                     type: integer
                   isWatched:
+                    type: boolean
+                  canDelete:
                     type: boolean
                   responsibleOrganization:
                     type: string
@@ -2395,6 +2486,7 @@ paths:
                   - confirmationsCount
                   - watchersCount
                   - isWatched
+                  - canDelete
                   - responsibleOrganization
                   - version
                   - isDemo
@@ -2473,6 +2565,8 @@ paths:
                     minimum: 0
                     type: integer
                   isWatched:
+                    type: boolean
+                  canDelete:
                     type: boolean
                   responsibleOrganization:
                     type: string
@@ -2673,6 +2767,7 @@ paths:
                   - confirmationsCount
                   - watchersCount
                   - isWatched
+                  - canDelete
                   - responsibleOrganization
                   - version
                   - isDemo
@@ -2751,6 +2846,8 @@ paths:
                     minimum: 0
                     type: integer
                   isWatched:
+                    type: boolean
+                  canDelete:
                     type: boolean
                   responsibleOrganization:
                     type: string
@@ -2946,6 +3043,7 @@ paths:
                   - confirmationsCount
                   - watchersCount
                   - isWatched
+                  - canDelete
                   - responsibleOrganization
                   - version
                   - isDemo
@@ -3024,6 +3122,8 @@ paths:
                     minimum: 0
                     type: integer
                   isWatched:
+                    type: boolean
+                  canDelete:
                     type: boolean
                   responsibleOrganization:
                     type: string
@@ -3395,6 +3495,64 @@ paths:
                     type: string
                   requestId:
                     type: string
+  /api/polls/{pollId}:
+    delete:
+      tags:
+        - polls
+      parameters:
+        - schema:
+            type: string
+            format: uuid
+          in: path
+          name: pollId
+          required: true
+      security:
+        - bearerAuth: []
+        - demoUser: []
+      responses:
+        "200":
+          description: Default Response
+          content:
+            application/json:
+              schema:
+                type: object
+                required:
+                  - deleted
+                properties:
+                  deleted:
+                    type: boolean
+        "403":
+          description: Default Response
+          content:
+            application/json:
+              schema:
+                type: object
+                required:
+                  - error
+                  - message
+                properties:
+                  error:
+                    type: string
+                  message:
+                    type: string
+                  requestId:
+                    type: string
+        "404":
+          description: Default Response
+          content:
+            application/json:
+              schema:
+                type: object
+                required:
+                  - error
+                  - message
+                properties:
+                  error:
+                    type: string
+                  message:
+                    type: string
+                  requestId:
+                    type: string
   /api/polls/{pollId}/votes:
     post:
       tags:
@@ -3531,6 +3689,8 @@ paths:
                   houseId:
                     format: uuid
                     type: string
+                  isDemo:
+                    type: boolean
                   management:
                     type: object
                     required:
